// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagDelete Dialog Renders the component 1`] = `
<fragment-stub><span><button type="button" class="v-icon notranslate v-icon--link material-icons theme--light">delete</button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`TagDelete Icon Renders the component 1`] = `
<fragment-stub><span><button type="button" class="v-icon notranslate v-icon--link material-icons theme--light">delete</button></span><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
